[package]
authors = ["Kenan Sulayman <kenan@sly.mn>", "softprops <d.tangren@gmail.com>"]
build = "build.rs"
description = "A github webhook server"
documentation = "http://softprops.github.io/afterparty"
homepage = "https://github.com/softprops/afterparty"
keywords = ["github", "ci", "webhook", "hyper"]
license = "MIT"
name = "afterparty-ng"
repository = "https://github.com/softprops/afterparty"
version = "0.2.0"

[build-dependencies]
glob = "0.2.11"
serde_codegen = "0.8"
serde_json = "0.8"

[dependencies]
case = "1.0.0"
env_logger = "0.6.0"
hex = "0.3.2"
hyper = "0.9"
log = "0.4.6"
rust-crypto = "0.2.36"
serde = "0.8"
serde_json = "0.8"

[dev-dependencies]
env_logger = "0.3"
