[package]
authors = ["Kenan Sulayman <kenan@sly.mn>", "softprops <d.tangren@gmail.com>", "Kay Lin <i@v2bv.net>"]
build = "build.rs"
description = "A github webhook server"
documentation = "http://softprops.github.io/afterparty"
homepage = "https://github.com/softprops/afterparty"
keywords = ["github", "ci", "webhook", "hyper"]
license = "MIT"
name = "afterparty-ng"
repository = "https://github.com/softprops/afterparty"
version = "0.4.2"
edition = "2018"

[build-dependencies]
glob = "0.3"
serde_codegen = "0.9"
serde_json = "0.9"

[dependencies]
case = "1.0"
hex = "0.3"
hyper = "0.10"
log = "0.4"
ring = "0.14"
serde = "0.9"
serde_json = "0.9"

[dev-dependencies]
env_logger = "0.6"
